--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,50 +10,52 @@
     <!-- style -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- loader -->
     <div class="loader">
-       <div class="loader-count">
+        <div class="loader-count">
             <span></span>
         </div>
-    <div class="click-here">Click Here.</div>
+        <div class="click-here">Click Here.</div>
     </div>
     <div class="loader-blue"></div>
     <!-- loader end -->
-    
+
     <div id="main">
         <div class="hero-section">
             <div id="cursor">
-                <video  preload="auto" class="video" id="hi">
+                <video preload="auto" class="video" id="hi">
                     <source src="assets/images/hi.mp4" type="video/mp4">
-                </video> 
+                </video>
                 <img class="arrow" src="assets/images/arrow.png" alt="arrow">
             </div>
             <nav>
-                <div class="logo">Sharon V.</div>
+                <div class="logo"><img src="assets/images/logo.png" alt=""></div>
                 <div class="nav-links">
-                    <a href="#">About</a>
                     <a href="#">Projects</a>
-                    <a href="#">Contact</a>
+                    <a href="mailto:sharonarmin84@gmail.com">Contact</a>
                 </div>
             </nav>
             <div class="hero" id="hover">
                 <h1 data-scroll data-scroll-speed="2">Sharon V.</h1>
             </div>
             <div class="hero-desc-box">
-                <p class="hero-desc" >UI/UX <span>Designer</span> and Front End <span>Developer</span></p>
+                <p class="hero-desc">UI/UX <span>Designer</span> and Front End <span>Developer</span></p>
             </div>
         </div>
 
         <!-- work -->
         <div class="works-section">
             <div class="grid-container">
-                <div class="grid-1" >
+                <div class="grid-1">
                     <div class="w-cards">
                         <div class="card1">
                             <div>
-                                <h4 class="project">Arclan.in</h4>
-                                <p class="project-desc">Korem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                                <h4 class="project">Arclan</h4>
+                                <p class="project-desc">Passionate team of architects crafting stunning, functional
+                                    spaces tailored to exceed clients' expectations in residential and commercial
+                                    projects.</p>
                             </div>
                             <div>
                                 <h4 class="tools">Tools</h4>
@@ -68,7 +71,7 @@
                             </div>
                         </div>
                         <div class="project-img">
-                            <img src="assets/images/image 6.png" alt="arclan mockup" class="img-fluid">
+                            <img src="assets/images/works/arclan.png" alt="arclan mockup" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -79,11 +82,12 @@
                 <div class="grid-3">
                     <div class="w-card-3">
                         <div class="project-img">
-                            <img src="assets/images/image 6.png" alt="arclan mockup" class="img-fluid">
+                            <img src="assets/images/works/mavens.png" alt="arclan mockup" class="img-fluid">
                         </div>
                         <div>
-                            <h4 class="project">Arclan.in</h4>
-                            <p class="project-desc">Korem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                            <h4 class="project">Mavenseducation</h4>
+                            <p class="project-desc">Passionate team of foreign education consultants dedicated to
+                                helping students pursue higher education abroad.</p>
                         </div>
                         <div>
                             <h4 class="tools">Tools</h4>
@@ -101,10 +105,11 @@
                 </div>
                 <div class="grid-4">
                     <div class="project-img">
-                        <img src="assets/images/image 6.png" alt="arclan mockup" class="img-fluid">
+                        <img src="assets/images/works/iec.png" alt="arclan mockup" class="img-fluid">
                     </div>
-                    <h4 class="project">Arclan.in</h4>
-                    <p class="project-desc">Korem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                    <h4 class="project">IEC</h4>
+                    <p class="project-desc">Innovative Electro-Mechanical Contracting: Leading expertise in industrial,
+                        residential, and commercial sectors, ensuring excellence.</p>
                     <div>
                         <h4 class="tools">Tools</h4>
                         <div class="tools-box">
@@ -118,85 +123,80 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="grid-5">sa</div> -->
             </div>
         </div>
-        <!-- skills -->
-        <div class="skills-section">
-            <div class="box">
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Figma</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Photoshop</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Html</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Css</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Javascript</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>React</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Gsap</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Figma</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Photoshop</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Html</p>
-                <img src="assets/images/hope-icon.png" alt="">
+
+        <!-- work end -->
+
+        <!-- about -->
+        <div class="about-section">
+            <div class="about-left">
+                <h4>About ME</h4>
+                <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis</p>
             </div>
-            <div class="box1">
-                <p>Html</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Css</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Javascript</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>React</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Gsap</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Figma</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Photoshop</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Html</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Css</p>
-                <img src="assets/images/hope-icon.png" alt="">
-                <p>Javascript</p>
-                <img src="assets/images/hope-icon.png" alt="">
+            <div class="about-right">
+                <div class="content-sections">
+                    <div class="contents">
+                        <h6>Content</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="contents">
+                        <h6>Content</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="contents">
+                        <h6>Content</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <!-- about me -->
-        <div class="about-me-section">
-            <div class="about-me">
-                <h2>About Me</h2>
-            </div>
-            <div class="about-details-div">
-                <div class="about-me-1">
-                    <div class="about-desc-box">
-                        <p>Rorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis. Ut commodo efficitur neque.</p>
-                    </div>
+        <!-- about end -->
+
+        <div class="about-section-2">
+            <div class="about-section-bg"></div>
+            <h4>Elevating businesses through expertise in creating remarkable digital user experiences, driving innovation, and delivering impeccable design solutions</h4>
+            <div class="count-section">
+                <div class="count">
+                    <h5>+15</h5>
+                    <p>Total Projects</p>
                 </div>
-                <div class="about-me-2">
-                    <div class="my-img">
-                        <img src="assets/images/meee.png" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="about-me-3">
-                    <div class="my-img">
-                        <img src="assets/images/portfolio-2023.png" class="img-fluid" alt="">
-                    </div>
+                <div class="count">
+                    <h5>+3</h5>
+                    <p>Years of Experience</p>
                 </div>
             </div>
         </div>
 
 
-        <div class="page-4">
-            
+        <!-- contact section -->
+        <div class="contact-section">
+            <h4 class="head">Let's build the website of <br>tomorrow, today.</h4>
+                <div class="contact-me-sec">
+                    <p>Send a message</p>
+                    <a href="mailto:sharonarmin84@gmail.com">sharonarmin84@gmail.com</a>
+                </div>
+            <div class="connect-me">
+                <img src="assets/images/linkedin.png" alt="">
+                <img src="assets/images/github.png" alt="">
+                <img src="assets/images/instagram.png" alt="">
+            </div>
+            <div class="footer-logo">
+                <h4>SHARON</h4>
+                <h4>SHARON</h4>
+            </div>
         </div>
+        <!-- contact end -->
     </div>
 
 
@@ -206,12 +206,19 @@
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <!-- split text -->
     <script src="https://unpkg.com/split-type"></script>
+
     <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScalePlugin.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+    <script>
+
+
+
+    </script>
 
     <!-- main js -->
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
