--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 
         <!-- contact section -->
         <div class="contact-section">
+            <div class="ftr-cursor">
+                <span></span>
+            </div>
             <h4 class="head">Let's build the website of <br>tomorrow, today.</h4>
                 <div class="contact-me-sec">
                     <p>Send a message</p>
