--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </nav>
             <div class="hero" id="hover">
-                <h1 data-scroll data-scroll-speed="2">Sharon V.</h1>
+                <h1 data-scroll data-scroll-speed="1">Sharon V.</h1>
             </div>
             <div class="hero-desc-box">
                 <p class="hero-desc">UI/UX <span>Designer</span> and Front End <span>Developer</span></p>
@@ -76,32 +76,39 @@
                     </div>
                 </div>
                 <div class="grid-2">
-                    <div class="top-card"></div>
-                    <div class="bottom-card"></div>
+                    <div class="top-card">
+                        <div class="project-img">
+                            <img src="assets/images/works/vtrust.png" alt="vtrust mockup" class="img-fluid">
+                        </div>
+                        <h4 class="project">V Trust Eye Care</h4>
+                    </div>
+                    <div class="center-card">
+                        <div class="project-img">
+                            <img src="assets/images/works/asker.png" alt="arclan mockup" class="img-fluid">
+                        </div>
+                        <h4 class="project">Asker Sweets</h4>
+                    </div>
+                    <div class="bottom-card">
+
+                    </div>
                 </div>
                 <div class="grid-3">
-                    <div class="w-card-3">
                         <div class="project-img">
                             <img src="assets/images/works/mavens.png" alt="arclan mockup" class="img-fluid">
                         </div>
                         <div>
                             <h4 class="project">Mavenseducation</h4>
-                            <p class="project-desc">Passionate team of foreign education consultants dedicated to
-                                helping students pursue higher education abroad.</p>
+                            <p class="project-desc">A dedicated team of enthusiastic consultants specializing in assisting students to pursue higher education opportunities abroad with passion.</p>
                         </div>
                         <div>
                             <h4 class="tools">Tools</h4>
                             <div class="tools-box">
                                 <img src="assets/images/tools/figma.png" alt="figma">
                                 <img src="assets/images/tools/photoshop.png" alt="photoshop">
-                                <img src="assets/images/tools/html.png" alt="html">
-                                <img src="assets/images/tools/css.png" alt="css">
-                                <img src="assets/images/tools/javascript.png" alt="js">
-                                <img src="assets/images/tools/bootstrap.png" alt="bootstrap">
-                                <img src="assets/images/tools/gsap.png" alt="gsap">
+                                <img src="assets/images/tools/wordpress.png" alt="wordpress">
+                                <img src="assets/images/tools/elementor.png" alt="elementor">
                             </div>
                         </div>
-                    </div>
                 </div>
                 <div class="grid-4">
                     <div class="project-img">
@@ -119,7 +126,6 @@
                             <img src="assets/images/tools/css.png" alt="css">
                             <img src="assets/images/tools/javascript.png" alt="js">
                             <img src="assets/images/tools/bootstrap.png" alt="bootstrap">
-                            <img src="assets/images/tools/gsap.png" alt="gsap">
                         </div>
                     </div>
                 </div>
@@ -131,20 +137,19 @@
         <!-- about -->
         <div class="about-section">
             <div class="about-left">
-                <h4>About ME</h4>
-                <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis</p>
+                <h4>About Me</h4>
+                <p>Hey there! I'm Sharon, a UI/UX designer and front-end developer who geeks out on making the web a more intuitive place.</p>
             </div>
             <div class="about-right">
                 <div class="content-sections">
                     <div class="contents">
-                        <h6>Content</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
+                        <h6>Who am I</h6>
+                        <p>I'm Sharon, a UI/UX designer and front-end developer with 2.5 + years of experience under my belt. I thrive on the process of transforming ideas into user-centric interfaces that are both beautiful and functional.  My passion lies in creating intuitive experiences that not only look great, but also solve problems and make users' lives easier.
                         </p>
                         <hr>
                     </div>
                     <div class="contents">
-                        <h6>Content</h6>
+                        <h6>I'm From</h6>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel porro dolorum laborum ipsa dolores, soluta incidunt veritatis beatae et delectus facilis culpa tempora magnam ipsum laudantium at fugit voluptas nobis?
                         </p>
@@ -209,7 +214,10 @@
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <!-- split text -->
     <script src="https://unpkg.com/split-type"></script>
-
+    <!-- matter js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
+    <script src="assets/js/matter.js"></script>
     <!-- gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
