--- a/index.html
+++ b/index.html
@@ -195,9 +195,15 @@
                     <a href="mailto:sharonarmin84@gmail.com">sharonarmin84@gmail.com</a>
                 </div>
             <div class="connect-me">
-                <img src="assets/images/linkedin.png" alt="">
-                <img src="assets/images/github.png" alt="">
-                <img src="assets/images/instagram.png" alt="">
+                <a href="https://www.linkedin.com/in/sharonv96/" target="_blank">
+                    <img src="assets/images/linkedin.png" alt="linkedin">
+                </a>
+                <a href="https://github.com/Sharonarmin" target="_blank">
+                    <img src="assets/images/github.png" alt="github">
+                </a>
+                <a href="https://www.instagram.com/sharon_armin_?igsh=cDJua2kxOGlhcms2" target="_blank">
+                    <img src="assets/images/instagram.png" alt="">
+                </a>
             </div>
             <div class="footer-logo">
                 <h4>SHARON</h4>
