--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                     <div class="w-cards">
                         <div class="card1">
                             <div>
-                                <h4 class="project">Arclan</h4>
+                                <a href="https://arclan.in/" target="_blank">
+                                    <h4 class="project">Arclan</h4>
+                                </a>
                                 <p class="project-desc">Passionate team of architects crafting stunning, functional
                                     spaces tailored to exceed clients' expectations in residential and commercial
                                     projects.</p>
@@ -80,13 +82,17 @@
                         <div class="project-img">
                             <img src="assets/images/works/vtrust.png" alt="vtrust mockup" class="img-fluid">
                         </div>
-                        <h4 class="project">V Trust Eye Care</h4>
+                        <a href="https://vtrusteyehospital.com/" target="_blank">
+                            <h4 class="project">V Trust Eye Care</h4>
+                        </a>
                     </div>
                     <div class="center-card">
                         <div class="project-img">
                             <img src="assets/images/works/asker.png" alt="arclan mockup" class="img-fluid">
                         </div>
-                        <h4 class="project">Asker Sweets</h4>
+                        <a href="https://www.askersweets.com/" target="_blank">
+                            <h4 class="project">Asker Sweets</h4>
+                        </a>
                     </div>
                     <div class="bottom-card">
 
@@ -97,7 +103,9 @@
                             <img src="assets/images/works/mavens.png" alt="arclan mockup" class="img-fluid">
                         </div>
                         <div>
-                            <h4 class="project">Mavenseducation</h4>
+                            <a href="https://mavenseducation.com/" target="_blank">
+                                <h4 class="project">Mavenseducation</h4>
+                            </a>
                             <p class="project-desc">A dedicated team of enthusiastic consultants specializing in assisting students to pursue higher education opportunities abroad with passion.</p>
                         </div>
                         <div>
@@ -114,7 +122,9 @@
                     <div class="project-img">
                         <img src="assets/images/works/iec.png" alt="arclan mockup" class="img-fluid">
                     </div>
-                    <h4 class="project">IEC</h4>
+                    <a href="https://iecuae.ae/" target="_blank">
+                        <h4 class="project">IEC</h4>
+                    </a>
                     <p class="project-desc">Innovative Electro-Mechanical Contracting: Leading expertise in industrial,
                         residential, and commercial sectors, ensuring excellence.</p>
                     <div>
